--- a/electron/package.json
+++ b/electron/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "concurrently": "^9.1.2",
     "electron": "^36.4.0"
   }
 }
