--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "main": "electron/main.js",
   "scripts": {
-    "start": "concurrently \"npm run server\" \"npm run client\" \"wait-on http://localhost:5173 && npm run electron\"",
+    "start": "concurrently \"npm run server\" \"npm run electron\"",
     "server": "node backend/server.js",
-    "client": "npm --prefix frontend run dev",
     "electron": "electron electron/main.js"
   },
   "repository": {
